Repairing responsive layout issues

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -66,21 +66,29 @@ body {
   }
 }
 .container {
-  @media screen and (max-width: $screen-md) {
+  @media screen and (max-width: 1200px) {
     padding: 0 70px;
   }
   @media screen and (max-width: $screen-sm) {
-    padding: 0px 35px;
+    padding: 0 30px;
   }
 }
 .content {
   margin: 30px 0px;
+  @media screen and (max-width: $screen-sm) {
+    margin: 50px 0px;
+  }
 }
 
 .page-header {
     @include h2;
     letter-spacing: 2px;
     margin-bottom: 15px;
+}
+.wrap {
+  @media screen and (max-width: $screen-sm) {
+    margin-top: 90px !important;
+  }
 }
 
 // Posts
@@ -101,7 +109,7 @@ body {
 
 // Breakpoint Specific Classes
 .desktop-hidden {
-  @media screen and (min-width: ($screen-sm + 1px)) {
+  @media screen and (min-width: 950px) {
     display: none;
   }
 }
