--- a/assets/styles/components/_headline-marquee.scss
+++ b/assets/styles/components/_headline-marquee.scss
@@ -32,6 +32,7 @@ $marquee-innerwrapper-margin: 60px 40px;
   &-caption {
     @include h4;
     display: flex;
+    flex-wrap: wrap;
     line-height: 1.5em;
     @media screen and (max-width: $screen-sm) {
       display: block;
@@ -41,8 +42,12 @@ $marquee-innerwrapper-margin: 60px 40px;
       color: $brand-secondary;
     }
     p {
+      width: 60%;
+      margin-right: 10px;
+      margin-bottom: 20px;
       @media screen and (max-width: $screen-sm) {
         margin-bottom: 20px;
+        width: 100%;
       }
     }
   }
