--- a/assets/styles/layouts/_soapbox.scss
+++ b/assets/styles/layouts/_soapbox.scss
@@ -11,6 +11,11 @@ $soapbox-wrapper-margin:  45px 0;
   width: 100%;
   height: 316px;
   background-color: $soapbox-bgcolor;
+  .wrap {
+    @media screen and ( max-width: $screen-sm ) {
+      margin-top: 0px !important;
+    }
+  }
   @media screen and ( max-width: $screen-sm ) {
     height: auto;
     padding-top: 80px;
@@ -42,6 +47,9 @@ $soapbox-wrapper-margin:  45px 0;
 }
 .soapbox-wrapper {
   margin: $soapbox-wrapper-margin;
+  @media screen and (max-width: $screen-sm) {
+    margin-top: 0;
+  }
   article {
     margin-bottom: 33px;
   }
